--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="default_tip">15</string>
     <string name="tip_amount">Tip Amount</string>
     <string name="currency_symbol">$</string>
+    <string name="korean_won">₩</string>
     <string name="up_button">Up Button</string>
     <string name="down_button">Down Button</string>
     <string name="percent_symbol">%</string>
@@ -21,4 +22,24 @@
         <item>3 ways</item>
         <item>4 ways</item>
     </string-array>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="default_currency_symbol">Your default currency symbol</string>
+    <string name="reply_title">Rounding?</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="settings_menu_text">Settings</string>
+    <string name="about_menu_text">About</string>
+    <string name="about_text">This is a tip calculator app.  There are preferences.</string>
+    <string name="currency_symbol_key">currency_symbol_key</string>
 </resources>
